--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,26 @@
 name = "app-path"
 version = "0.1.0"
 edition = "2021"
-description = "Create paths relative to executable location for applications"
-keywords = ["app", "path", "executable", "relative", "local"]
-repository = "https://github.com/DK26/app-path-rs"
+authors = ["David Krasnitsky <dikaveman@gmail.com>"]
+description = "Create file paths relative to your executable for truly portable applications"
 license = "MIT OR Apache-2.0"
+repository = "https://github.com/DK26/app-path-rs"
+homepage = "https://github.com/DK26/app-path-rs"
+documentation = "https://docs.rs/app-path"
 readme = "README.md"
+keywords = [
+    "filesystem",
+    "portable",
+    "paths",
+    "executable",
+    "cross-platform",
+    "app",
+    "path",
+    "executable",
+    "relative",
+    "local",
+]
+categories = ["filesystem", "development-tools"]
+
+[dependencies]
+# Your dependencies here
