--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,18 +9,7 @@ repository = "https://github.com/DK26/app-path-rs"
 homepage = "https://github.com/DK26/app-path-rs"
 documentation = "https://docs.rs/app-path"
 readme = "README.md"
-keywords = [
-    "filesystem",
-    "portable",
-    "paths",
-    "executable",
-    "cross-platform",
-    "app",
-    "path",
-    "executable",
-    "relative",
-    "local",
-]
+keywords = ["filesystem", "portable", "paths", "executable", "cross-platform"]
 categories = ["filesystem", "development-tools"]
 
 [dependencies]
