improve: enhance CI pipeline with auto-fixing capabilities
Local CI script (ci-local.sh):
- Auto-fix formatting and clippy issues before running checks
- Simplified interface - no flags needed, just run bash ci-local.sh
- Provides clear guidance when fixes are applied

GitHub Actions CI workflow:
- Added helpful error messages with fix suggestions when checks fail
- Shows exact commands to run locally for auto-fixing
- Maintains security by not auto-committing changes in CI
- Added reference to local script for development workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,7 @@
 name: CI
+# 
+# This workflow runs CI checks on GitHub Actions.
+# For local development with auto-fixing, use: bash ci-local.sh
 
 on:
   push:
@@ -47,8 +50,24 @@ jobs:
     - name: Check formatting
       run: cargo fmt --all -- --check
 
+    - name: Show formatting diff (if check failed)
+      if: failure()
+      run: |
+        echo "❌ Formatting check failed. Run 'cargo fmt --all' to fix."
+        echo "Here's what would be changed:"
+        cargo fmt --all -- --check --verbose || true
+        echo ""
+        echo "To fix locally, run: cargo fmt --all"
+
     - name: Run clippy
       run: cargo clippy --all-targets --all-features -- -D warnings
+
+    - name: Show clippy fixes (if check failed)  
+      if: failure()
+      run: |
+        echo "❌ Clippy check failed. Some issues might be auto-fixable."
+        echo "To fix locally, run: cargo clippy --fix --allow-dirty --allow-staged --all-targets --all-features"
+        echo "Then run: cargo clippy --all-targets --all-features -- -D warnings"
 
     - name: Run tests
       run: cargo test --verbose
