--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,9 @@ keywords = ["filesystem", "portable", "paths", "executable", "cross-platform"]
 categories = ["filesystem", "development-tools"]
 
 [dependencies]
-# Your dependencies here
+# Zero dependencies for runtime
+
+[dev-dependencies]
+serde = { version = "1.0", features = ["derive"] }
+camino = { version = "1.1", features = ["serde1"] }
+typed-path = "0.11.0"
