Optimize CI pipelines and fix MSRV compatibility
- Removed redundant compilation steps from both local and GitHub Actions CI
- Eliminated separate 'cargo check' since 'cargo test' compiles everything
- Removed separate 'cargo test --doc' since doc tests are included in regular test run
- Added Rust version warnings to ci-local.sh for nightly/stable compatibility
- Added MSRV check (Rust 1.70.0) to align with GitHub Actions workflow
- Regenerated Cargo.lock with MSRV-compatible format
- Both pipelines now run identical checks efficiently without redundancy

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,4 @@
 name: CI
-# 
-# This workflow runs CI checks on GitHub Actions.
-# For local development with auto-fixing, use: bash ci-local.sh
 
 on:
   push:
@@ -69,7 +66,8 @@ jobs:
         echo "To fix locally, run: cargo clippy --fix --allow-dirty --allow-staged --all-targets --all-features"
         echo "Then run: cargo clippy --all-targets --all-features -- -D warnings"
 
-    - name: Run tests
+    # Skip 'cargo check' since 'cargo test' compiles everything anyway
+    - name: Run tests (includes compilation and doc tests)
       run: cargo test --verbose
 
   docs:
